syntax = "proto3";

package hello;

service HelloService {
  rpc SayHello(Empty) returns (SayHelloResponse) {}
}

message Empty {}

message SayHelloResponse {
  string message = 1;
}